Add permission descriptions

--- a/language/english/help/help.html
+++ b/language/english/help/help.html
@@ -6,4 +6,10 @@
 
     <p>Surnames is a module to assist in maintaining a surname registry - a registry for genealogists to find other researches with an interest in a specific surname.
 
+    <h4>Permissions</h4>
+    <p>Each group can be assigned these permissions:</p>
+    <ul>
+    <li><strong>Auto-Approve</strong> - Automatically approve submissions if set, otherwise surname submissions must be approved by an administrator before they will be seen.</li>
+    <li><strong>Add/Edit/Delete for Others</strong> - If set, members of this group can edit surnames for other users. This is normally reserved for administrators.</li>
+    </ul>
 </div>
